--- a/elasticsearch/templates/statefulset.yaml
+++ b/elasticsearch/templates/statefulset.yaml
@@ -236,66 +236,37 @@ spec:
         readinessProbe:
           exec:
             command:
-              - bash
+              - sh
               - -c
               - |
-                set -e
-
-                # Exit if ELASTIC_PASSWORD in unset
-                if [ -z "${ELASTIC_PASSWORD}" ]; then
-                  echo "ELASTIC_PASSWORD variable is missing, exiting"
-                  exit 1
-                fi
-
-                # If the node is starting up wait for the cluster to be ready (request params: "{{ .Values.clusterHealthCheckParams }}" )
+                #!/usr/bin/env bash -e
+                # If the node is starting up wait for the cluster to be green
                 # Once it has started only check that the node itself is responding
+                # Exit if ELASTIC_PASSWORD in unset
                 START_FILE=/tmp/.es_start_file
 
-                # Disable nss cache to avoid filling dentry cache when calling curl
-                # This is required with Elasticsearch Docker using nss < 3.52
-                export NSS_SDB_USE_CACHE=no
-
                 http () {
-                  local path="${1}"
-                  local args="${2}"
-                  set -- -XGET -s
-
-                  if [ "$args" != "" ]; then
-                    set -- "$@" $args
-                  fi
-
-                  set -- "$@" -u "elastic:${ELASTIC_PASSWORD}"
-
-                  curl --output /dev/null -k "$@" "{{ .Values.protocol }}://127.0.0.1:{{ .Values.httpPort }}${path}"
+                    local path="${1}"
+                    if [ -n "${ELASTIC_USERNAME}" ] && [ -n "${ELASTIC_PASSWORD}" ]; then
+                      BASIC_AUTH="-u ${ELASTIC_USERNAME}:${ELASTIC_PASSWORD}"
+                    else
+                      BASIC_AUTH=''
+                    fi
+                    curl -XGET -s -k --fail ${BASIC_AUTH} http://127.0.0.1:9200${path}
                 }
 
                 if [ -f "${START_FILE}" ]; then
-                  echo 'Elasticsearch is already running, lets check the node is healthy'
-                  HTTP_CODE=$(http "/" "-w %{http_code}")
-                  RC=$?
-                  if [[ ${RC} -ne 0 ]]; then
-                    echo "curl --output /dev/null -k -XGET -s -w '%{http_code}' \${BASIC_AUTH} {{ .Values.protocol }}://127.0.0.1:{{ .Values.httpPort }}/ failed with RC ${RC}"
-                    exit ${RC}
-                  fi
-                  # ready if HTTP code 200, 503 is tolerable if ES version is 6.x
-                  if [[ ${HTTP_CODE} == "200" ]]; then
-                    exit 0
-                  elif [[ ${HTTP_CODE} == "503" && "{{ include "elasticsearch.esMajorVersion" . }}" == "6" ]]; then
-                    exit 0
-                  else
-                    echo "curl --output /dev/null -k -XGET -s -w '%{http_code}' \${BASIC_AUTH} {{ .Values.protocol }}://127.0.0.1:{{ .Values.httpPort }}/ failed with HTTP code ${HTTP_CODE}"
-                    exit 1
-                  fi
-
+                    echo 'Elasticsearch is already running, lets check the node is healthy'
+                    http "/"
                 else
-                  echo 'Waiting for elasticsearch cluster to become ready (request params: "{{ .Values.clusterHealthCheckParams }}" )'
-                  if http "/_cluster/health?{{ .Values.clusterHealthCheckParams }}" "--fail" ; then
-                    touch ${START_FILE}
-                    exit 0
-                  else
-                    echo 'Cluster is not yet ready (request params: "{{ .Values.clusterHealthCheckParams }}" )'
-                    exit 1
-                  fi
+                    echo 'Waiting for elasticsearch cluster to become green'
+                    if http "/_cluster/health?wait_for_status=green&timeout=120s" ; then
+                        touch ${START_FILE}
+                        exit 0
+                    else
+                        echo 'Cluster is not yet green'
+                        exit 1
+                    fi
                 fi
 {{ toYaml .Values.readinessProbe | indent 10 }}
         ports:
